# pim

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: release.yml  rust.yml
nix/: pim.nix
src/: args.rs  consts.rs  core.rs  main.rs  utils.rs
src/core/: converter.rs  unit.rs
src/ext/: units.rs
src/ext/units/: em.rs  pt.rs  px.rs  rem.rs
tests/: integration_test.rs
