[package]
name = "pim"
version = "0.1.1"
edition = "2021"
description = "lightweight converter for CSS units"
readme = "README.md"
repository = "https://github.com/airRnot1106/pim"
license-file = "LICENSE"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
indexmap = "2.7.0"
num = "0.4.3"
